jenkins/nfs-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nfs-service
  namespace: jenkins
spec:
  selector:
    role: nfs
  ports:
    - name: tcp-2049
      port: 2049
      protocol: TCP
    - name: udp-111
      port: 111
      protocol: UDP

---
kind: Pod
apiVersion: v1
metadata:
  name: nfs-server
  namespace: jenkins
  labels:
    role: nfs
spec:
  containers:
    - name: nfs-server-ct
      image: cpuguy83/nfs-server
      securityContext:
        privileged: true
      args:
        - /exports
